Show print properties in Words and Author print dialogs

BUG: 323255